# reactos

./: .gitignore  CMakeLists.txt  Cargo-kernel.toml  Cargo.toml  Cargo_minimal.toml  Cargo_unoptimized.toml  LICENSE  Makefile  README-DD-UEFI-LINUX.md  README-ISOS-AUTOMATICAS.md  README-UEFI-BOOTLOADER.md  README-UEFI-NATIVO-SIN-BIOS.md  README-UEFI-SOLUTIONS.md  README-USB-BOOT.md  README.md  SOLUCION-ASUS-10GEN-REAL.md  SOLUCION-USB-UEFI-ASUS-10GEN.md  SOLUCIONES_APLICADAS.md  build-uefi-bootloader.sh  build.sh  burn-to-usb.sh  compile-custom-bootloader.sh  compile-reactos-posix.sh  compile-reactos-with-custom-isos.sh  configure-build.sh  configure-posix.sh  create-complete-eclipse-iso.sh  create-eclipse-os-complete-iso.sh  create-elf-kernel-iso.sh  create-real-hardware-iso.sh  create-simple-complete-iso.sh  create-simple-kernel-iso.sh  create-uefi-usb-fixed.sh  create-uefi-usb.sh  debug-boot.sh  eclipse-os-kernel.c  extract-efi-files.sh  fix_ranlib.sh  fixed-kernel.c  install-reactos-uefi-permanent.sh  (+18 more)
apps/calc64/: Cargo.toml
apps/calc64/src/: main.rs
apps/native/: Cargo.toml
apps/native/src/: calculator.rs  common.rs  file_explorer.rs  lib.rs  text_editor.rs
apps/test32/: Cargo.toml
apps/test32/src/: main.rs
boot/: CMakeLists.txt  custom-isos.cmake
boot/freeldr/: CMakeLists.txt  FREELDR.INI
boot/freeldr/custom-bootloader/: CMakeLists.txt  customboot.def  customboot.rc  main.c
boot/freeldr/fdebug/: CMakeLists.txt
boot/freeldr/freeldr/: CMakeLists.txt  Makefile-rosload-custom  pcat.cmake  rosload-custom.c  rosload-custom.h  rosload.cmake  uefi-native.cmake
boot/uefi-bootloader/: Makefile
dll/win32/ufat/: CMakeLists.txt
dll/win32/verifier/: CMakeLists.txt
kernel/: Cargo.toml  src.rs
kernel-backup/: Cargo.toml  README.md
kernel-backup/src/: container_system_simple.rs  customization_system.rs  filesystem_simple.rs  main.rs  ntfs_integration.rs  power_thermal_manager.rs  privacy_system.rs  synchronization.rs  thread.rs
kernel-backup/src/drivers/: mod.rs  network.rs  storage.rs
kernel-backup/src/gui/: event.rs  font.rs  nvidia_benchmark.rs
kernel-backup/src/network/: icmp.rs  network_manager.rs  udp.rs
kernel-backup/src/performance/: cache.rs  pool.rs
kernel-backup/src/process/: scheduler.rs
kernel-backup/src/security/: access_control.rs  audit.rs
kernel/src/: algorithms.rs  debug.rs  file_manager.rs  lib.rs  memory.rs  microkernel.rs  monitoring.rs  performance.rs  plugin_system.rs  shell.rs  smart_security.rs  standalone_minimal.rs
kernel/src/gui/: compositor.rs  font.rs  framebuffer.rs  nvidia.rs  nvidia_benchmark.rs  nvidia_control.rs
reactos-rust-integration/: CMakeLists.txt
reactos-rust-integration/api/: advapi32.c  kernel32.c  ntdll.c  user32.c
reactos-rust-integration/drivers/: graphics_driver.c  network_driver.c  ntfs_driver.c
reactos-rust-integration/ffi/: ffi_bridge.c
reactos-rust-integration/include/: ffi_bridge.h
reactos-rust-integration/services/: config_service.c  event_service.c  registry_service.c
reactos-rust-integration/src/: main.c
reactos-rust-integration/tests/: CMakeLists.txt  test_ffi_bridge.c
reactos-rust-kernel/: Cargo-original.toml  Cargo.toml  create_multiboot_kernel.sh  direct_kernel  direct_kernel.asm  flat_kernel.asm  flat_mb1.asm  hybrid.ld  hybrid_boot.asm  kernel.asm  kernel.flat  minimal_kernel.asm  multiboot.ld  rust_bootloader.asm  rust_kernel.ld  simple.ld  working_kernel  working_kernel.asm  x86_64-reactos-rust.json
reactos-rust-kernel/src/: 3d_renderer.rs  advanced_audio.rs  advanced_gui.rs  ai_realtime.rs  algorithms.rs  apps.rs  audio.rs  boot.rs  debug.rs  dynamic_commands.rs  file_manager.rs  file_operations.rs  filesystem.rs  gui.rs  hardware.rs  interrupts.rs  level_editor.rs  logging.rs  main.rs  memory.rs  mouse.rs  multiboot_header.rs  network.rs  network_protocols.rs  nvidia_gpu.rs  performance.rs  physics_system.rs  process.rs  renderer_3d.rs  shell.rs  signals.rs  simple_kernel.rs  system_settings.rs  text_editor.rs  vga.rs
reactos-rust-kernel/src/core/: mod.rs
reactos-rust-kernel/src/ffi/: kernel_bindings.rs
reactos-rust-kernel/src/ke/: scheduler.rs  synchronization.rs
reactos-rust-kernel/src/ntapi/: mod.rs
reactos-rust-os/bootloader/: Cargo.toml  README.md
reactos-rust-os/bootloader/.cargo/: config.toml
reactos-rust-os/bootloader/src/: main.rs  main_simple.rs
reactos-rust-os/drivers/: Cargo.toml
reactos-rust-os/drivers/src/: cpu_ai.rs  network.rs  npu.rs  storage.rs  vga.rs
reactos-rust-os/kernel/: Cargo.toml
reactos-rust-os/kernel/src/: ai.rs  ai_system.rs  extensions.rs  filesystem.rs  graphics.rs  hardware.rs  interrupts.rs  keyboard.rs  lib.rs  lib_unified.rs  logging.rs  main.rs  main_original.rs  main_unified.rs  modern_gui.rs  multiboot_header.rs  network_driver.rs  process.rs  process_simple.rs  scheduler.rs  security.rs  shell.rs  thread.rs  vga.rs
reactos-rust-os/security/: Cargo.toml
reactos-rust-os/security/src/: authentication_service.rs  intrusion_detection.rs  key_management.rs  security_manager.rs
reactos-rust-os/tools/debugging/: Cargo.toml
reactos-rust-os/userland/: Cargo.toml
reactos-rust-os/userland/src/: advapi32.rs  ai_anomaly.rs  ai_assistant.rs  ai_gpu_failover.rs  ai_predictor.rs  applications.rs  fat32.rs  main.rs  ntdll.rs  reactfs.rs  security.rs  services.rs  user32.rs
reactos-rust-os/wow64/: Cargo.toml  README.md
reactos-rust-os/wow64/src/: main.rs
reactos-rust-os/wow64/tests/: mod.rs  test_runner.rs
reactos-rust-testing/kernel/: Cargo.toml  linker.ld  multiboot.ld
reactos-rust-testing/kernel/src/: lib.rs  main.rs  main_bare_metal.rs  memory.rs  memory_simple.rs  multiboot_header.rs  process.rs
sdk/tools/gcc_plugin_seh/: CMakeLists.txt
testing/stress/: Cargo.toml
testing/stress/src/: concurrency_stress_test.rs  cpu_stress_test.rs  (+3 more)
userland/: Cargo.toml
userland/src/: ai_core.rs  ai_hardware.rs  ai_multi_gpu.rs  ai_performance.rs  comctl32.rs  file_system.rs  gdi32.rs  gui.rs  kernel32.rs  lib.rs  networking.rs  ntfs.rs  ole32.rs  registry.rs  services.rs  shell.rs  shell32.rs
(+2253 files in other folders)
