[package]
name = "eclipse-os"
version = "0.1.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Sistema Operativo Eclipse - Windows compatible en Rust"

[[bin]]
name = "eclipse-os"
path = "src/main.rs"

[[bin]]
name = "init"
path = "src/main.rs"

[[bin]]
name = "eclipse-kernel"
path = "src/kernel.rs"

[dependencies]
# APIs de Windows
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Time",
    "Win32_System_Environment"
] }
num_cpus = "1.0"

# GUI Dependencies
eframe = "0.26.0"
egui = "0.26.0"
egui_plot = "0.26.0"

# File System Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"

# GUI Dependencies
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = false

[profile.release]
opt-level = 2
debug = false
lto = false

# Configuración específica para el kernel

[profile.dev.package."*"]
opt-level = 0
debug = true

[profile.release.package."*"]
opt-level = 2
debug = false
