[package]
name = "eclipse-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Kernel Eclipse OS - no_std compatible"

[[bin]]
name = "eclipse-kernel"
path = "src/kernel.rs"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = false
panic = "abort"

[profile.release]
opt-level = 2
debug = false
lto = false
panic = "abort"