[package]
name = "reactos-rust-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reactos-rust-kernel"
path = "src/main.rs"

[[bin]]
name = "reactos-rust-kernel-multiboot2"
path = "src/multiboot2_main.rs"

[[bin]]
name = "reactos-rust-kernel-simple"
path = "src/main_simple.rs"

[[bin]]
name = "reactos-rust-kernel-standalone"
path = "src/standalone.rs"

[[bin]]
name = "reactos-rust-kernel-minimal"
path = "src/minimal.rs"

[[bin]]
name = "reactos-rust-kernel-standalone-minimal"
path = "src/standalone_minimal.rs"

[dependencies]
reactos-rust-hal = { path = "../hal" }
reactos-rust-drivers = { path = "../drivers" }
reactos-rust-testing = { path = "../testing" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3