[package]
name = "reactos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Kernel de ReactOS en Rust"

[lib]
name = "reactos_kernel"
crate-type = ["lib"]

[dependencies]
# Dependencias básicas para no_std
libc = "0.2"
anyhow = "1.0"

[features]
default = []
no_std = []
