[package]
name = "reactos-rust-native-apps"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Aplicaciones nativas para ReactOS Rust"

[[bin]]
name = "file-explorer"
path = "src/file_explorer.rs"

[[bin]]
name = "text-editor"
path = "src/text_editor.rs"

[[bin]]
name = "calculator"
path = "src/calculator.rs"

[[bin]]
name = "image-viewer"
path = "src/image_viewer.rs"

[[bin]]
name = "audio-player"
path = "src/audio_player.rs"

[[bin]]
name = "system-monitor"
path = "src/system_monitor.rs"

[dependencies]
# Sin dependencias externas para evitar problemas de compilación

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
