[package]
name = "test32"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Aplicación de prueba 32-bit para WOW64"

# Configuración para aplicación 32-bit
[[bin]]
name = "test32"
path = "src/main.rs"

[dependencies]
# Dependencias para Windows API 32-bit
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true
overflow-checks = true

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
debug = false
overflow-checks = false
strip = true
