[package]
name = "reactos-rust-bootloader"
version = "1.0.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Bootloader para ReactOS Rust OS"

[dependencies]
# No dependencies for bootloader - pure Rust

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = "s"  # Optimize for size in dev too
debug = true
