[package]
name = "reactos-uefi-bootloader"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Bootloader UEFI moderno para ReactOS Rust OS"
license = "GPL-2.0"

# Configuración para binario UEFI
[[bin]]
name = "bootloader"
path = "src/uefi_bootloader.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true
overflow-checks = true

[profile.release]
panic = "abort"
lto = false
opt-level = "z"
debug = false
overflow-checks = false

[dependencies]
# Dependencias mínimas para UEFI
uefi = "0.35"

[build-dependencies]
# Herramientas de build para UEFI
uefi-macros = "0.8"