[package]
name = "reactos-rust-drivers"
version = "1.0.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Drivers para ReactOS Rust OS"

[dependencies]
# Dependencias de drivers
bitflags = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = "s"
debug = true
