[package]
name = "reactos-rust-userland"
version = "1.0.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Userland y Win32 API para ReactOS Rust OS"

[dependencies]
# Dependencias del userland
bitflags = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = "s"
debug = true
