[package]
name = "reactos-wow64"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Capa WOW64 para compatibilidad con aplicaciones 32-bit en ReactOS Rust"
license = "GPL-2.0"

# Configuración para binario
[[bin]]
name = "wow64"
path = "src/main.rs"

# Configuración para pruebas
[[bin]]
name = "test_runner"
path = "tests/test_runner.rs"

[dependencies]
# Sin dependencias externas para evitar problemas de compilación

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true
overflow-checks = true

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
debug = false
overflow-checks = false
strip = true
