[package]
name = "reactos-rust-stress-tests"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Pruebas de estrés y rendimiento para ReactOS Rust"

[[bin]]
name = "stress-test-runner"
path = "src/stress_test_runner.rs"

[[bin]]
name = "memory-stress-test"
path = "src/memory_stress_test.rs"

[[bin]]
name = "cpu-stress-test"
path = "src/cpu_stress_test.rs"

[[bin]]
name = "network-stress-test"
path = "src/network_stress_test.rs"

[[bin]]
name = "concurrency-stress-test"
path = "src/concurrency_stress_test.rs"

[[bin]]
name = "filesystem-stress-test"
path = "src/filesystem_stress_test.rs"

[[bin]]
name = "benchmark-suite"
path = "src/benchmark_suite.rs"

[dependencies]
# Sin dependencias externas para evitar problemas de compilación
