[package]
name = "reactos-rust-debugging-tools"
version = "0.1.0"
edition = "2021"
authors = ["ReactOS Rust Team"]
description = "Herramientas de depuración y diagnóstico para ReactOS Rust"

[[bin]]
name = "kernel-debugger"
path = "src/kernel_debugger.rs"

[[bin]]
name = "process-monitor"
path = "src/process_monitor.rs"

[[bin]]
name = "memory-analyzer"
path = "src/memory_analyzer.rs"

[[bin]]
name = "performance-profiler"
path = "src/performance_profiler.rs"

[[bin]]
name = "system-logger"
path = "src/system_logger.rs"

[[bin]]
name = "system-diagnostics"
path = "src/system_diagnostics.rs"

[dependencies]
# Sin dependencias externas para evitar problemas de compilación
